added header and nav made button in mixins.

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,12 @@
 // Mixins Here
+.custom-btn(@button-bg, @width, @font-color, @height) {
+    width: @width;
+    background-color: @button-bg;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    color: @font-color;
+    height: @height;
+    font-size: 1.8rem;
+}
