--- a/less/home-page.less
+++ b/less/home-page.less
@@ -2,16 +2,27 @@
 
 .home {
 
+
+
+
   .intro {
+    display: flex;
+    flex-direction: column;
+
+    img {
+      display: flex;
+      border-radius: 10px;
+      width: 100%;
+    }
 
     h2 {
       padding: 15px;
     }
 
     p {
-      padding:0 15px;
+      padding: 0 15px;
     }
-  
+
   }
 
   .space-images {
@@ -58,13 +69,14 @@
       }
 
       .btn {
+        .custom-btn(gray, 11rem, #fff, 6rem)
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
-      
+
       img {
         width: 100%;
         height: auto;
@@ -72,4 +84,6 @@
       }
     }
   }
-}// home
+}
+
+// home
