--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,31 @@
-// Navigation code here
+.header-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    margin: auto;
+
+    background-color: lightgray;
+
+    h1 {
+        font-size: 4rem;
+        text-align: center;
+
+    }
+
+
+    nav {
+        display: flex;
+        justify-content: center;
+
+        a {
+            text-decoration: none;
+            padding: 1.7rem;
+            font-size: 1.3rem;
+
+        }
+    }
+
+
+}
