working on responsive fitment

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -9,4 +9,14 @@
     color: @font-color;
     height: @height;
     font-size: 1.8rem;
+
+    &:hover {
+        background-color: @font-color;
+        color: @button-bg;
+    }
+}
+
+.flex {
+    display: flex;
+    justify-content: center;
 }
