--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
+.flex {
+  display: flex;
+  justify-content: center;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -166,7 +170,7 @@ p {
   justify-content: center;
   align-items: center;
   margin: auto;
-  background-color: lightgray;
+  background-color: #F6F6F6;
 }
 .header-section h1 {
   font-size: 4rem;
@@ -180,6 +184,7 @@ p {
   text-decoration: none;
   padding: 1.7rem;
   font-size: 1.3rem;
+  color: #454A59;
 }
 footer {
   color: #22283B;
@@ -200,6 +205,11 @@ footer {
   border-radius: 10px;
   width: 100%;
 }
+@media screen and (max-width: 500px) {
+  .home .intro img {
+    width: 100%;
+  }
+}
 .home .intro h2 {
   padding: 15px;
 }
@@ -216,6 +226,14 @@ footer {
   margin: 20px 2.5%;
   border-radius: 20px;
   height: 100%;
+}
+@mobile screen and (max-width:500px) {
+  .lauch {
+    display: none;
+  }
+  .sky {
+    display: none;
+  }
 }
 .home .visit-planets {
   padding: 15px;
@@ -236,6 +254,11 @@ footer {
 .home .walk .walk-text {
   width: 50%;
 }
+@media screen and (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 90%;
+  }
+}
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
 }
@@ -253,11 +276,25 @@ footer {
   height: 6rem;
   font-size: 1.8rem;
 }
-.home .walk .walk-img {
+.home .walk .walk-text .btn:hover {
+  background-color: #fff;
+  color: gray;
+}
+@mobile screen and (max-width:500px) {
+  width: 90vw;
+}
+@media screen and (max-width: 500px) {
+  .home .walk {
+    flex-direction: column-reverse;
+    justify-content: center;
+    width: 100%;
+  }
+}
+.home .walk-img {
   width: 46%;
   margin-left: 4%;
 }
-.home .walk .walk-img img {
+.home .walk-img img {
   width: 100%;
   height: auto;
   border-radius: 10px;
