--- a/less/home-page.less
+++ b/less/home-page.less
@@ -13,6 +13,11 @@
       display: flex;
       border-radius: 10px;
       width: 100%;
+
+      @media screen and (max-width:500px) {
+        width: 100%;
+      }
+
     }
 
     h2 {
@@ -30,46 +35,67 @@
     flex-wrap: wrap;
     width: 100%;
 
+
+
     img {
       width: 28%;
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
-    }
-  }
 
-  .visit-planets {
-    padding: 15px;
-
-    h3 {
-      margin-top: 11px;
+      @mobile screen and (max-width:500px) {
+        display: flex;
+      }
     }
 
-    p {
-      margin-top: 13px;
-    }
-  }
 
-  .walk {
-    margin-top: 60px;
-    border-top: 1px solid @main-border-color;
-    padding: 50px 60px;
-    display: flex;
-    justify-content: center;
 
-    .walk-text {
-      width: 50%;
+    .visit-planets {
+      padding: 15px;
 
       h3 {
-        margin-bottom: 10px;
+        margin-top: 11px;
       }
 
       p {
-        margin-bottom: 26px;
+        margin-top: 13px;
+      }
+    }
+
+    .walk {
+      margin-top: 60px;
+      border-top: 1px solid @main-border-color;
+      padding: 50px 60px;
+      .flex();
+
+      .walk-text {
+        width: 50%;
+
+        @media screen and (max-width:500px) {
+          width: 90%;
+        }
+
+        h3 {
+          margin-bottom: 10px;
+        }
+
+        p {
+          margin-bottom: 26px;
+        }
+
+        .btn {
+          .custom-btn(gray, 11rem, #fff, 6rem)
+        }
+
+        @mobile screen and (max-width:500px) {
+          width: 90vw;
+        }
       }
 
-      .btn {
-        .custom-btn(gray, 11rem, #fff, 6rem)
+      @media screen and (max-width:500px) {
+        flex-direction: column-reverse;
+        justify-content: center;
+        width: 100%
       }
     }
 
@@ -84,6 +110,3 @@
       }
     }
   }
-}
-
-// home
