--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,7 +6,8 @@
 
     margin: auto;
 
-    background-color: lightgray;
+    background-color: @wild-sand;
+
 
     h1 {
         font-size: 4rem;
@@ -19,11 +20,13 @@
         display: flex;
         justify-content: center;
 
+
+
         a {
             text-decoration: none;
             padding: 1.7rem;
             font-size: 1.3rem;
-
+            color: @river-bend;
         }
     }
 
