--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,3 @@
-.flex {
-  display: flex;
-  justify-content: center;
-}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -205,11 +201,6 @@ footer {
   border-radius: 10px;
   width: 100%;
 }
-@media screen and (max-width: 500px) {
-  .home .intro img {
-    width: 100%;
-  }
-}
 .home .intro h2 {
   padding: 15px;
 }
@@ -227,12 +218,16 @@ footer {
   border-radius: 20px;
   height: 100%;
 }
-@mobile screen and (max-width:500px) {
-  .lauch {
+@media screen and (max-width:500px) {
+  .home .space-images .sky {
     display: none;
   }
-  .sky {
+  .home .space-images .launch {
     display: none;
+  }
+  .home .space-images .blast {
+    width: 90%;
+    padding-left: 2%;
   }
 }
 .home .visit-planets {
@@ -251,12 +246,20 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media screen and (max-width:500px) {
+  .home .walk {
+    flex-direction: column-reverse;
+    width: 100%;
+    padding: 2%;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
 }
-@media screen and (max-width: 500px) {
+@media screen and (max-width:500px) {
   .home .walk .walk-text {
-    width: 90%;
+    width: 95%;
+    margin-left: 5%;
   }
 }
 .home .walk .walk-text h3 {
@@ -267,7 +270,7 @@ footer {
 }
 .home .walk .walk-text .btn {
   width: 11rem;
-  background-color: gray;
+  background-color: #22283A;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -278,21 +281,21 @@ footer {
 }
 .home .walk .walk-text .btn:hover {
   background-color: #fff;
-  color: gray;
+  color: #22283A;
 }
-@mobile screen and (max-width:500px) {
-  width: 90vw;
-}
-@media screen and (max-width: 500px) {
-  .home .walk {
-    flex-direction: column-reverse;
-    justify-content: center;
-    width: 100%;
+@media screen and (max-width:500px) {
+  .home .walk .walk-text .btn {
+    width: 95%;
   }
 }
 .home .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media screen and (max-width:500px) {
+  .home .walk-img {
+    width: 90%;
+  }
 }
 .home .walk-img img {
   width: 100%;
