--- a/less/home-page.less
+++ b/less/home-page.less
@@ -13,11 +13,6 @@
       display: flex;
       border-radius: 10px;
       width: 100%;
-
-      @media screen and (max-width:500px) {
-        width: 100%;
-      }
-
     }
 
     h2 {
@@ -35,78 +30,106 @@
     flex-wrap: wrap;
     width: 100%;
 
-
-
     img {
       width: 28%;
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
-
-      @mobile screen and (max-width:500px) {
-        display: flex;
-      }
     }
 
-
-
-    .visit-planets {
-      padding: 15px;
-
-      h3 {
-        margin-top: 11px;
+    @media @phone {
+      .sky {
+        display: none;
       }
 
-      p {
-        margin-top: 13px;
-      }
-    }
-
-    .walk {
-      margin-top: 60px;
-      border-top: 1px solid @main-border-color;
-      padding: 50px 60px;
-      .flex();
-
-      .walk-text {
-        width: 50%;
-
-        @media screen and (max-width:500px) {
-          width: 90%;
-        }
-
-        h3 {
-          margin-bottom: 10px;
-        }
-
-        p {
-          margin-bottom: 26px;
-        }
-
-        .btn {
-          .custom-btn(gray, 11rem, #fff, 6rem)
-        }
-
-        @mobile screen and (max-width:500px) {
-          width: 90vw;
-        }
+      .launch {
+        display: none;
       }
 
-      @media screen and (max-width:500px) {
-        flex-direction: column-reverse;
-        justify-content: center;
-        width: 100%
-      }
-    }
-
-    .walk-img {
-      width: 46%;
-      margin-left: 4%;
-
-      img {
-        width: 100%;
-        height: auto;
-        border-radius: 10px;
+      .blast {
+        width: 90%;
+        padding-left: 2%;
       }
     }
   }
+
+  .visit-planets {
+    padding: 15px;
+
+    h3 {
+      margin-top: 11px;
+    }
+
+    p {
+      margin-top: 13px;
+    }
+  }
+
+  .walk {
+    margin-top: 60px;
+    border-top: 1px solid @main-border-color;
+    padding: 50px 60px;
+    display: flex;
+    justify-content: center;
+
+    @media @phone {
+      flex-direction: column-reverse;
+      width: 100%;
+      padding: 2%;
+
+    }
+
+    .walk-text {
+      width: 50%;
+
+      @media @phone {
+        width: 95%;
+        margin-left: 5%;
+      }
+
+      h3 {
+        margin-bottom: 10px;
+      }
+
+      p {
+        margin-bottom: 26px;
+      }
+
+      .btn {
+        .custom-btn(@btn-bg-color, 11rem, #fff, 6rem);
+
+        @media @phone {
+          width: 95%;
+
+        }
+      }
+
+
+    }
+  }
+
+
+
+
+
+
+
+  .walk-img {
+    width: 46%;
+    margin-left: 4%;
+
+
+    @media @phone {
+      width: 90%;
+    }
+
+
+    img {
+      width: 100%;
+      height: auto;
+      border-radius: 10px;
+
+
+    }
+  }
+}
